--- a/Docs/Manual/man/man3/KillerPhysics_ForceGenerator.3
+++ b/Docs/Manual/man/man3/KillerPhysics_ForceGenerator.3
@@ -49,7 +49,7 @@ Unimplemented virtual function\&. Each force defines what happens during an upda
 .PP
 
 .PP
-Implemented in \fBKillerPhysics::BuoyantForce\fP, \fBKillerPhysics::AnchoredSpring\fP, \fBKillerPhysics::SpringForce\fP, \fBKillerPhysics::GravityForce\fP, and \fBKillerPhysics::ParticleDragForce\fP\&.
+Implemented in \fBKillerPhysics::AnchoredSpring\fP, \fBKillerPhysics::BuoyantForce\fP, \fBKillerPhysics::SpringForce\fP, \fBKillerPhysics::GravityForce\fP, and \fBKillerPhysics::ParticleDragForce\fP\&.
 .SS "virtual void KillerPhysics::ForceGenerator::v_UpdateForce (shared_ptr< \fBRigidBody\fP > body)\fC [pure virtual]\fP"
 Unimplemented virtual function\&. Each force defines what happens during an update\&. This is the part that will make the forces different\&. 
 .PP
