--- a/Docs/Manual/man/man3/KillerPhysics_SpringForce.3
+++ b/Docs/Manual/man/man3/KillerPhysics_SpringForce.3
@@ -7,12 +7,20 @@ KillerPhysics::SpringForce
 .br
 .PP
 .PP
+\fC#include <SpringForce\&.h>\fP
+.PP
 Inherits \fBKillerPhysics::ForceGenerator\fP\&.
 .SS "Public Member Functions"
 
 .in +1c
 .ti -1c
+.RI "\fBSpringForce\fP (void)"
+.br
+.ti -1c
 .RI "\fBSpringForce\fP (shared_ptr< \fBParticle\fP > otherEnd, real springConstant, real restLength)"
+.br
+.ti -1c
+.RI "\fB~SpringForce\fP (void)"
 .br
 .ti -1c
 .RI "void \fBv_UpdateForce\fP (shared_ptr< \fBParticle\fP > particle) final"
@@ -39,35 +47,116 @@ Inherits \fBKillerPhysics::ForceGenerator\fP\&.
 .ti -1c
 .RI "shared_ptr< \fBParticle\fP > \fB_otherEnd\fP"
 .br
+.RI "Other end of the spring\&. Consider changing to a GameObject\&. "
 .ti -1c
 .RI "real \fB_springConstant\fP"
 .br
+.RI "Determines the 'stiffness' of the spring\&. The higher this value is, the more force the spring can make\&. "
 .ti -1c
 .RI "real \fB_restLength\fP"
 .br
+.RI "Length of the spring at rest\&. When an object reaches this length, a force will be acted on it\&. "
 .ti -1c
 .RI "bool \fB_isBungie\fP"
 .br
+.RI "Changes the state of the spring to use only pull forces, allowing the spring to 'scrunch' up\&. "
 .in -1c
-.SH "Member Function Documentation"
+.SH "Detailed Description"
 .PP 
-.SS "void SpringForce::v_UpdateForce (shared_ptr< \fBParticle\fP > particle)\fC [final]\fP, \fC [virtual]\fP"
-Unimplemented virtual function\&. Each force defines what happens during an update\&. This is the part that will make the forces different\&. 
+A spring-like force that can be used with the Killer Engine\&.
+.PP
+It uses Hooks law to generate the amount of force based on the distance that the spring is extended\&.
+.PP
+The base equation is:
+.PP
+f = -k * delta * l
+.PP
+Where delta is the distance that the spring has been moved and k is what is known as the 'spring constant', a value that represents the 'stiffness' of the spring\&. For our terms, the equation will look like this:
+.PP
+f = -k(l - l^0)
+.PP
+Where l is the location of the end of the spring, and l^0 is the reseting position of the spring\&.
+.PP
+Since this is a vector force, the vector version of the law looks like this:
+.PP
+f = -l(|d| - l^0)^d
+.PP
+Where |d| is the magnitude or length of d, which is distance away from l^0 our spring now is, and ^d is a unit vector version of d\&. Also:
+.PP
+d = xA - xB
+.PP
+Where xA is the position of the spring attached to our object, and xB is the end of the spring\&.
+.PP
+Usage:
+.PP
+The force generator cannot be re-used\&. For each unique spring-like force we need to have its own Spring like force\&. Each spring-like force is created with a pointer to the object at the other end of the spring, the length of the spring, and the spring constant\&. This then must be registered with a ForceRegistry*\&. 
+.SH "Constructor & Destructor Documentation"
+.PP 
+.SS "SpringForce::SpringForce (void)"
+Sets spring constant to 1, rest length to 1, everything else to default or false\&. 
+.SS "SpringForce::SpringForce (shared_ptr< \fBParticle\fP > otherEnd, real springConstant, real restLength)"
+Allows you to set up \fBSpringForce\fP in a single call\&. 
 .PP
 \fBParameters:\fP
 .RS 4
-\fIparticle\fP defines this as the \fBParticle\fP object version\&. 
+\fIotherEnd\fP is the far end of the spring\&. 
+.br
+\fIspringConstant\fP determines the 'stiffness' of the spring\&. 
+.br
+\fIrestLength\fP determines how long before the spring 'snaps' back\&. 
+.RE
+.PP
+
+.SS "SpringForce::~SpringForce (void)"
+Not implemented\&. 
+.SH "Member Function Documentation"
+.PP 
+.SS "void KillerPhysics::SpringForce::MakeBungie (bool state)\fC [inline]\fP"
+Sets state to be bungie-like\&. This means that it will only produce pull forces\&. If the rest length is not at full, it will not product any force\&. 
+.SS "void KillerPhysics::SpringForce::SetOtherEnd (shared_ptr< \fBParticle\fP > end)\fC [inline]\fP"
+Changes the location of the other end of the spring\&. 
+.PP
+\fBParameters:\fP
+.RS 4
+\fIend\fP is the new opposite end of the spring\&. 
+.RE
+.PP
+
+.SS "void KillerPhysics::SpringForce::SetRestLength (real length)\fC [inline]\fP"
+Changes the length of the invisible spring\&. 
+.PP
+\fBParameters:\fP
+.RS 4
+\fIlength\fP is the new value for the rest length\&. 
+.RE
+.PP
+
+.SS "void KillerPhysics::SpringForce::SetSpringConstant (real constant)\fC [inline]\fP"
+Changes the 'striffness' of the spring\&. 
+.PP
+\fBParameters:\fP
+.RS 4
+\fIconstant\fP is the new value for the spring constant\&. 
+.RE
+.PP
+
+.SS "void SpringForce::v_UpdateForce (shared_ptr< \fBParticle\fP > particle)\fC [final]\fP, \fC [virtual]\fP"
+Calculate the length of the spring, then creates a force to pull the object towards the other end if it is far enough away\&. 
+.PP
+\fBParameters:\fP
+.RS 4
+\fIparticle\fP is the object that will be acted on by the spring\&. 
 .RE
 .PP
 
 .PP
 Implements \fBKillerPhysics::ForceGenerator\fP\&.
 .SS "void SpringForce::v_UpdateForce (shared_ptr< \fBRigidBody\fP > body)\fC [final]\fP, \fC [virtual]\fP"
-Unimplemented virtual function\&. Each force defines what happens during an update\&. This is the part that will make the forces different\&. 
+Calculate the length of the spring, then creates a force to pull the object towards the other end if it is far enough away\&. This has been implemented but not tested\&. 
 .PP
 \fBParameters:\fP
 .RS 4
-\fIparticle\fP defines this as the \fBRigidBody\fP object version\&. 
+\fIbody\fP is the object that will be acted on by the spring\&. 
 .RE
 .PP
 
