Coding standards added to main page

--- a/Docs/Manual/man/man3/Atom.h.3
+++ b/Docs/Manual/man/man3/Atom.h.3
@@ -136,7 +136,7 @@ F:/Projects/Killer_Engine/Headers/Engine/Atom.h
 .in -1c
 .SH "Detailed Description"
 .PP 
-Global helpers and defines\&. 
+Called Atom because it is the most basic include file\&. This is the file to be included with all other files that are made\&. This contains the type definitions that will be the atomic variable types for the KillerEngine (as suggested by Jason Gregory in Game Engine Architecture 2nd Edition)\&. It will also contain the basic header files that every other class or file will need\&. 
 .SH "Function Documentation"
 .PP 
 .SS "\fBF32\fP DEGREE (\fBF32\fP radian)\fC [inline]\fP"
