--- a/Docs/Manual/man/man3/KillerMath_Vector.3
+++ b/Docs/Manual/man/man3/KillerMath_Vector.3
@@ -1,4 +1,4 @@
-.TH "KillerMath::Vector" 3 "Mon Feb 11 2019" "Killer Engine" \" -*- nroff -*-
+.TH "KillerMath::Vector" 3 "Tue Feb 12 2019" "Killer Engine" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -167,7 +167,7 @@ KillerMath::Vector
 .PP 
 A custom \fBVector\fP class writen for the Killer Engine\&.
 .PP
-The \fBVector\fP is a 4 element 3D vector\&. The \fBVector\fP consists of an x, y, z and w component represented by an array of F32 values\&. They are refered as x, y, z and w through through documentation\&. In code, you would have to refered to them as their index in the array (0 - 3)\&. There is an alias set up in the \fBVector\fP, and enum, that lets you use x, y, z and w to represent the indices natively\&. This is private to the \fBVector\fP\&. The w is included mostly used for convenience when multiplying with a 4X4 \fBMatrix\fP\&. It follows all the rules of a \fBVector\fP and can be used for what you need it to be\&. 
+The \fBVector\fP is a 4 element 3D vector\&. The \fBVector\fP consists of an x, y, z and w component represented by an array of F32 values\&. They are refered as x, y, z and w through documentation\&. In code, you would have to refered to them as their index in the array (0 - 3)\&. There is an alias set up in the \fBVector\fP, and enum, that lets you use x, y, z and w to represent the indices natively\&. This is private to the \fBVector\fP\&. The w is included mostly used for convenience when multiplying with a 4X4 \fBMatrix\fP\&. It follows all the rules of a \fBVector\fP and can be used for what you need it to be\&. 
 .SH "Member Enumeration Documentation"
 .PP 
 .SS "anonymous enum\fC [private]\fP"
